Trying to fix alignment

--- a/LGBTQmap/mobile.css
+++ b/LGBTQmap/mobile.css
@@ -30,7 +30,7 @@ html, body, #bigmap {
 }
 
 #tipRight {
-	line-height: 37px;
+	line-height: 39px;
 }#tipLeft {
-	line-height: 37px;
+	line-height: 39px;
 }
